[tool.poetry]
name = "oauth2-cli-auth"
version = "1.0.0"
description = "Authenticate against OAuth2 Provider in Python CLIs"
authors = ["Timo Reymann <mail@timo-reymann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timo-reymann/python-oauth2-cli-auth"
packages = [
    { include = "oauth2_cli_auth" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Framework :: Ansible"
]
exclude = [
    "**/*_test.py",
    "**/__testdata__/**"
]
include = [
    "LICENSE"
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timo-reymann/python-oauth2-cli-auth/issues"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
default = false
secondary = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pdoc3 = "^0.10.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*_test"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
