[tool.poetry]
name = "oauth2-cli-auth"
version = "2.0.0"
description = "Authenticate against OAuth2 Provider in Python CLIs"
authors = ["Timo Reymann <mail@timo-reymann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timo-reymann/python-oauth2-cli-auth"
packages = [
    { include = "oauth2_cli_auth" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix"
]
exclude = [
    "**/*_test.py",
    "**/__testdata__/**"
]
include = [
    "LICENSE"
]
[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timo-reymann/python-oauth2-cli-auth/issues"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority="explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.3.2"
setuptools = "^81.0.0"
pydoctor = "^24.0.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/*_test.py"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydoctor]
verbose = 0
warnings-as-errors = true

intersphinx = ["https://docs.python.org/3/objects.inv"]
docformat = "restructuredtext"
html-output = "gh-pages"

add-package = ["oauth2_cli_auth"]
project-name = "oauth2_cli_auth"
project-url = "https://github.com/timo-reymann/python-oauth2-cli-auth"
privacy = [
    "HIDDEN:oauth2_cli_auth.*_test",
    "HIDDEN:oauth2_cli_auth.conftest"
]

theme = "base"
template-dir = "pydoctor-theme"
